Fix overflow extra scrollbar problem
EP-205

--- a/microservices/www/imports/ui/pages/HomePage/HomePageDescription/HomePageDescription.scss
+++ b/microservices/www/imports/ui/pages/HomePage/HomePageDescription/HomePageDescription.scss
@@ -1,5 +1,5 @@
 @import './DescriptionItem/DescriptionItem.scss';
-$progression-color: #8db6e6;
+$progression-color: #8DB6E6;
 
 .home-page-description {
   display: flex;
